--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 	<h2 class="section-title">О НАС</h2>	
 	<div class="wrapper">
 		<div class="img-wrap"><img class="about-photo" src="img/Gosha.jpg" alt="Мастер заточки Гоша"></div>
-		<p class="">Игнатий [Гоша] - мастер, который вот уже почти 15 лет точит наши инструменты. ..... Люди обычно говорят так: "Как здорово, что вы меня выручили" Ну а если Вы не верите: "То собирайте все Ваш затупленные предметы, звоните нам - мы заберем, или приходите по адресу...</p>
+		<p class="">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non ut totam eos possimus vitae fugit nesciunt quisquam maxime deserunt quos, dolores soluta repellat nostrum, architecto optio ducimus dolorem mollitia nobis!</p>
 	</div>
 </section>
 
